@startuml
left to right direction
skinparam monochrome true
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam defaultFontName "Times New Roman"
skinparam defaultFontSize 12
skinparam classFontSize 11
skinparam ArrowThickness 1.3
skinparam dpi 150
skinparam nodesep 8
skinparam ranksep 10
hide empty members
scale 1.15

package "Подсистема USP и прогресса" {
  class FractureLoopConfig {
    +VariantCount: int
    +EntropyCap: int
    +DeathPenalty: int
  }

  class DeathCycleManager {
    +EntropyTier: int
    +CurrentVariant: int
    +RegisterDeath(kind: DeathKind, zone: string)
  }

  class RealityVariantController {
    +ApplyCurrentVariant()
    +ApplyVariantByIndex(index: int)
  }

  class PowerOutageScenario {
    +HasOutageStarted: bool
    +IsPowerRestored: bool
    +RestorePower()
  }

  class GeneratorSwitchInteract {
    +SetInteractEnabled(enabled: bool)
  }

  class ElevatorDoorController {
    +IsDoorFullyClosed: bool
    +HasPlayerInCabin: bool
  }

  class ElevatorEndSequence {
    +BeginFinalSequence()
  }
}

DeathCycleManager --> FractureLoopConfig : конфиг
RealityVariantController --> DeathCycleManager : вариант цикла
PowerOutageScenario --> GeneratorSwitchInteract : активация
ElevatorEndSequence --> ElevatorDoorController : состояние двери
PowerOutageScenario --> DeathCycleManager : энтропия

@enduml
